--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
   get: ^4.7.2
-  image_picker: ^1.1.2
+  image_picker: ^1.2.0
   google_mlkit_text_recognition: ^0.15.0
+  http: ^1.2.1
 
 
 
